--- a/index1.html
+++ b/index1.html
@@ -210,11 +210,11 @@
           <div class="footer__column_content_social">
             <div><a href="#" class="footer__column-heading">Соцсети</a></div>
              <nav class="footer__column-links">
-              <a class="footer__column-link" href="#"><div class="footer__social-icon"><img src="./images/instagram_color_white.svg" alt="logo_vk"> </div> Instagram</a>
-              <a class="footer__column-link" href="#"><div class="footer__social-icon"><img src="./images/vk_color_white.svg" alt="logo_vk"> </div> ВКонтакте</a>
-              <a class="footer__column-link" href="#"><div class="footer__social-icon"><img src="./images/facebook_color_white.svg" alt="logo_FB"></div> Facebook</a>
+              <a class="footer__column-link" href="#"><div class="footer__social-icon footer__social-icon_youtube"></div> YouTube</a>
+              <a class="footer__column-link" href="#"><div class="footer__social-icon footer__social-icon_vk"> </div> ВКонтакте</a>
+              <a class="footer__column-link" href="#"><div class="footer__social-icon footer__social-icon_tik-tok"></div> TikTok</a>
               </nav>
-
+              
             </div>
         </div>
         </footer>
