--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,6 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="UTF-8" >
-      <link rel="stylesheet" href="./pages/fonts.css">
       <link rel="stylesheet" href="./pages/page1.css">
       <title>Научиться учиться</title>
     </head>
@@ -14,7 +13,7 @@
           <div class="logo logo_place_header">
             <img src="./images/logo_place_header.svg" alt="Лого">
           </div>
-          <div class="header__title text"><p>Научиться учиться</p></div>
+          <h1 class="header__title">Научиться учиться</h1>
           <div class="header__square-pic"></div>
           <img class="header__main-illustration" src="./images/header-image.png" alt="здесь должна быть картинка">
 
@@ -26,162 +25,146 @@
         <!--Секция description-->
         <section class="description flexbox">
           <div class="two-columns description__two-columns">
-            <div class="two-columns__brief ">
-              <h4 class="text">Главные проблемы в обучении</h4>
-            </div>
+
+              <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+
             <div class="two-columns__main-text ">
-              <div class="two-columns__paragraph ">
-                <p class="text">Ни в школе, ни в институте нас
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас
                   не учат тому, как правильно изучать
                   материал. Мы готовимся к экзаменам и учим билеты.
                    Мы тренируемся решать однообразные задачи,
                    чтобы лучше сдать тест, но часто в итоге это
                    не дает нам реального знания.
                    Зубрежка быстро выветривается и не приносит пользы.</p>
-              </div>
-              <div class="two-columns__paragraph">
-                <p class="text"><span class="two-columns__span">Вывод:</span> учиться тоже нужно уметь,
+              <p class="two-columns__paragraph"><span class="two-columns__span">Вывод:</span> учиться тоже нужно уметь,
                   но почему-то этому мало где учат.
                   Что с этим делать?</p>
-              </div>
-              <div class="two-columns__paragraph">
-                <p class="text">Конкретные техники и упражнения
+              <p class="two-columns__paragraph">Конкретные техники и упражнения
                   помогают изменить подход к обучению,
                   сделать его эффективным и захватывающим.
                   Эти же техники применяются на примере обучения в Практикуме.</p>
-              </div>
             </div>
           </div>
         </section>
         <!--Секция techniques-->
-        <div class="techniques">
-          <div class="section-title techniques__section-title"><h3>Техники обучения</h3></div>
-          <div class="section-subtitle techniques__section-subtitle"><p>Пять практик от Барбары Оакли</p></div>
+        <section class="techniques">
+          <h3 class="section-title techniques__section-title">Техники обучения</h3>
+          <p class="section-subtitle techniques__section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards flexbox techniques__cards">
           <div class="cards__item"><img class="cards__image" src="./images/cards-attention.png" alt="внимание">
-            <div class="cards__title"><h4 class="text">Два вида внимания</h4></div>
-            <div class="cards__description">
-              <p class="text">Глубокие знания возникают, если чередовать сфокусированное внимение и рассеянное мышление</p>
-            </div>
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное внимение и рассеянное мышление</p>
           </div>
           <div class="cards__item"><img class="cards__image" src="./images/cards-recall.png" alt="повторение">
-            <div class="cards__title"><h4 class="text">Recall</h4></div>
-            <div class="cards__description">
-              <p class="text">Вспоминайте изученное - это позволит соединить разрозненные порции памяти</p>
-            </div>
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти</p>
           </div>
           <div class="cards__item"><img class="cards__image" src="./images/cards-interliving.png" alt="интерливинг">
-            <div class="cards__title"><h4 class="text">Интерливинг</h4></div>
-            <div class="cards__description">
-              <p class="text">Изучайте несколько навыков одновременно, они обогащают друг друга</p>
-            </div>
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга</p>
           </div>
           <div class="cards__item"><img class="cards__image" src="./images/cards-question.png" alt="вопрос">
-            <div class="cards__title"><h4 class="text">Вопросы</h4></div>
-            <div class="cards__description">
-              <p class="text">Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует</p>
-            </div>
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует</p>
           </div>
           <div class="cards__item"><img class="cards__image" src="./images/cards-competence.png" alt="иллюзии">
-            <div class="cards__title"><h4 class="text">Иллюзия компетентности</h4></div>
-            <div class="cards__description">
-              <p class="text">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой</p>
-            </div>
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой</p>
           </div>
           </div>
-        </div>
+        </section>
         <!--Секция digits-->
         <section class="digits">
-        <div class="section-title digits__section-title"><h3 class="text">Цифры и факты</h3></div>
-        <div class="section-subtitle digits__section-subtitle"><p class="text">Про учебу и мозг</p></div>
+        <h3 class="section-title digits__section-title">Цифры и факты</h3>
+        <p class="section-subtitle digits__section-subtitle">Про учебу и мозг</p>
         <div class="table flexbox digits__table">
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">86 миллиардов</h3></div>
-            <div class="table__text"><p class="text">Число нейронов в мозге человека</p></div>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">2,1 миллиарда</h3></div>
-            <div class="table__text"><p class="text">Число нуждающихся в повышении квалификации</p></div>
-            <div><p class="text">Всемирный Банк, 2017</p></div>
+            <h3 class="table__heading">2,1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">1000 терабайт</h3></div>
-            <div class="table__text"><p class="text">Объем памяти человека</p></div>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объем памяти человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">500 триллионов</h3></div>
-            <div class="table__text"><p class="text">Число ответственных за обучение нервных синапсов у взрослого человека</p></div>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">420 миллионов</h3></div>
-            <div class="table__text"><p class="text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p></div>
-            <div><p class="text">Всемирный Банк, 2017</p></div>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">17-20 лет</h3></div>
-            <div class="table__text"><p class="text">Пик обучаемости</p></div>
+            <h3 class="table__heading">17-20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">1885 год</h3></div>
-            <div class="table__text"><p class="text">Открытие кривой забывания</p></div>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3 class="text">1889 год</h3></div>
-            <div class="table__text"><p class="text">Открытие условного рефлекса</p></div>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
         </section>
         <!--Секция kaufman-->
-        <div class="kaufman">
-          <div class="section-title section-title_theme_dark"><h4 class="text">Принципы обучения</h4></div>
-          <div class="section-subtitle  section-subtitle_theme_dark"><p class="text">От Джоша Кауфмана</p></div>
+        <section class="kaufman">
+          <h4 class="section-title section-title_theme_dark">Принципы обучения</h4>
+          <p class="section-subtitle  section-subtitle_theme_dark">От Джоша Кауфмана</p>
           <div class="table flexbox table_theme_dark">
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">1</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Выберите привлекательный проект.</p></div>
+              <h4 class="table__heading_theme_dark">1</h4>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">2</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Сосредоточьтесь на каком-то одном навыке.</p></div>
+              <h4 class="table__heading_theme_dark">2</h4>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">3</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Определите целевой уровень мастерства.</p></div>
+              <h4 class="table__heading_theme_dark">3</h4>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">4</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Разбейте навык на элементы.</p></div>
+              <h4 class="table__heading_theme_dark">4</h4>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">5</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Приготовьте все необходимое для занятий.</p></div>
+              <h4 class="table__heading_theme_dark">5</h4>
+              <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">6</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Устраните препятствия для занятий.</p></div>
+              <h4 class="table__heading_theme_dark">6</h4>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">7</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Выделите специальное время для занятий.</p></div>
+              <h4 class="table__heading_theme_dark">7</h4>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">8</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Создайте быстрые петли обратной связи</p></div>
+              <h4 class="table__heading_theme_dark">8</h4>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">9</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></div>
+              <h4 class="table__heading_theme_dark">9</h4>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
             <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark"><h4 class="text">10</h4></div>
-              <div class="table__text table__text_theme_dark"><p class="text">Уделяйте внимание количеству и скорости.</p></div>
+              <h4 class="table__heading_theme_dark">10</h4>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-        </div>
+        </section>
         <!--Секция resources-->
         <section class="resources">
-          <div class="section-title resources__section-title"><h4 class="text">Полезные ресурсы</h4></div>
-          <div class="section-subtitle resources__section-subtitle"><p class="text">Больше материалов о техниках и лайфхаках обучения</p></div>
+          <h4 class="section-title resources__section-title">Полезные ресурсы</h4>
+          <p class="section-subtitle resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
           <table class="resources__logo-zone">
             <tr>
                 <td class="resources__logo"><a href="#"><img class="resources__link" src="./images/logo/resources-arzamas.svg" alt="Arzamas"></a></td>
@@ -200,7 +183,7 @@
           <div class="footer__author"><p class="text">&copy; Виктор Абанькин</p></div>
         </div>
           <div class="footer__column_content_info">
-            <div><a href="#" class="footer__column-heading">О Практикуме</a></div>
+            <a href="#" class="footer__column-heading">О Практикуме</a>
             <nav class="footer__column-links">
               <a href="#" class="footer__column-link">Главная</a>
               <a href="#" class="footer__column-link">Концепция</a>
@@ -208,13 +191,13 @@
               </nav>
             </div>
           <div class="footer__column_content_social">
-            <div><a href="#" class="footer__column-heading">Соцсети</a></div>
+            <a href="#" class="footer__column-heading">Соцсети</a>
              <nav class="footer__column-links">
               <a class="footer__column-link" href="#"><div class="footer__social-icon footer__social-icon_youtube"></div> YouTube</a>
               <a class="footer__column-link" href="#"><div class="footer__social-icon footer__social-icon_vk"> </div> ВКонтакте</a>
               <a class="footer__column-link" href="#"><div class="footer__social-icon footer__social-icon_tik-tok"></div> TikTok</a>
               </nav>
-              
+
             </div>
         </div>
         </footer>
