--- a/index2.html
+++ b/index2.html
@@ -76,11 +76,11 @@
         <div class="section-title video__section-title"><h2 class="text">Видео на TED</h2></div>
         <div class="section-subtitle video__section-subtitle"><p class="text">Для тех, кто любит прокрастинировать</p></div>
       <div class="video__iframes">
-        <iframe class="video__iframe" width="515" height="316" id="ytplayer"
+        <iframe class="video__iframe" width="515" height="316"
           src="https://www.youtube.com/embed/5MgBikgcWnY"
            allowfullscreen></iframe>
         <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-          title="YouTube video player"  allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          title="YouTube video player"
           allowfullscreen></iframe>
       </div>
       </section>
